# clippy_lint_test

./: Cargo.toml  README.md
src/: lib.rs  main.rs
